--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,19 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+@keyframes arrow {
+  0% {
+    left: -20px;
+  }
+  50% {
+    left: -16px;
+  }
+  100% {
+    left: -20px;
+  }
+}
+
+.theme-menu__button:disabled::before {
+  animation: arrow 1s ease-in-out infinite;
+}
