--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,215 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+
+  font-family: var(--main-font-family), sans-serif;
+  font-variation-settings: "wght" var(--normal-font-weight);
+  background-color: var(--bg-color);
+  color: var(--accent-color);
+  background-image: var(--bg-image);
+  background-attachment: fixed;
+  background-repeat: repeat;
+  background-size: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 102px 0 102px 0;
+}
+
+.header {
+  text-transform: uppercase;
+  background-color: var(--bg-color);
+  border: 2px solid var(--accent-color);
+  font-family: var(--accent-font-family);
+  font-weight: var(--normal-font-weight);
+  padding-block-start: clamp(8.5rem, 8.8333rem + -1.4815vw, 7.5rem);
+  padding-block-end: 25px;
+  width: clamp(371px, 50%, 696px);
+  margin-block-end: 102px;
+}
+
+.header__title {
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  margin-block-end: 20px;
+  text-align: center;
+}
+
+.header__subtitle {
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  margin-block-end: 22px;
+  text-align: center;
+}
+
+.header__theme-menu {
+  padding-left: 18px;
+}
+
+.theme-menu__list {
+  width: fit-content;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.theme-menu__button:disabled::before {
+  position: absolute;
+  content: "▶";
+  width: 16px;
+  height: 13px;
+  left: -20px;
+}
+
+.theme-menu__button {
+  position: relative;
+  font-size: 14px;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+}
+
+.theme-menu__button:focus-visible {
+  outline: none;
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+}
+
+.theme-menu__button::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  width: 100%;
+  height: 2px;
+  background-color: var(--accent-color);
+  opacity: 0.6;
+  transition: transform 0.3s ease;
+  transform-origin: left center;
+  transform: scaleX(0);
+}
+
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+}
+
+.section {
+  margin-inline-start: auto;
+  margin-inline-end: auto;
+  width: clamp(371px, 50%, 696px);
+  font-size: 18px;
+  background-color: var(--bg-color);
+  border: 2px solid var(--accent-color);
+  margin-block-end: 47px;
+}
+
+.section__title {
+  font-weight: var(--bold-font-weight);
+  font-size: 18px;
+  padding: 4px 10px;
+}
+
+.section__image {
+  width: 100%;
+  border-block: 2px solid var(--accent-color);
+}
+
+.section__content {
+  padding: 25px;
+}
+
+.section__card {
+  font-weight: var(--normal-font-weight);
+}
+
+.section__description {
+  font-size: 18px;
+  line-height: 21px;
+  margin-block-end: 25px;
+}
+
+.card__like {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+
+.card__icon-button {
+  margin-inline-end: 12px;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus {
+  outline: 2px solid var(--accent-color); /*неровно относительно кнопки + плавность*/
+}
+
+.card__like-button {
+  padding: 7px 34px;
+  border: 2px solid var(--accent-color);
+}
+
+.card__like-button:hover {
+
+}
+
+.card__like-button:focus {
+  outline: none;
+}
+
+.card__like-button:focus-visible {
+  box-shadow: 2px 2px 0 var(--accent-color); /*добавить плавсноть для box-shadow*/
+}
+
+.button__text {
+  font-family: var(--accent-font-family);
+  font-size: 14px;
+  font-weight: var(--normal-font-weight);
+}
+
+.footer__svg {
+  margin-inline-end: 8px;
+}
+
+.footer__button {
+  background-color: var(--bg-color);
+  padding: 14px 20px;
+  border: 2px solid var(--accent-color);
+}
+
+.footer__button:hover {
+
+}
+
+.footer__button:focus {
+  outline: none;
+}
+
+.footer__button:focus-visible {
+  box-shadow: 2px 2px 0 var(--accent-color); /*добавить плавсноть для box-shadow*/
+}
+
+@media (width <= 375px) {
+  .header {
+    width: 100%;
+  }
+
+  .section {
+    width: 100%;
+  }
 }
