--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,29 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+.theme-light {
+  --bg-color: #ffffff;
+  --accent-color: #000000;
+  --bg-image: url(../svg/pattern-light.svg);
+  --bold-font-weight: 700;
+  --normal-font-weight: 400;
+}
+
+.theme-dark {
+  --bg-color: #000000;
+  --accent-color: #00cc14;
+  --bg-image: url(../svg/pattern-dark.svg);
+  --bold-font-weight: 785;
+  --normal-font-weight: 465;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg-color: #000000;
+    --accent-color: #00cc14;
+    --bg-image: url(../svg/pattern-dark.svg);
+    --bold-font-weight: 785;
+    --normal-font-weight: 465;
+  }
+}
