--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,4 +8,5 @@
     --bg-color: #FFFFFF;
     --accent-color: #000000;
     --bg-image: url(../svg/pattern-light.svg);
+    --heart-accent: #FF0000;
 }
