--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,7 @@
   border: 2px solid var(--accent-color);
   font-family: var(--accent-font-family);
   font-weight: var(--normal-font-weight);
-  padding-block-start: clamp(8.5rem, 8.8333rem + -1.4815vw, 7.5rem);
+  padding-block-start: clamp(7.5rem, 7.1479rem + 1.5023vw, 8.5rem);
   padding-block-end: 28px;
   width: clamp(371px, 50%, 696px);
   margin-block-end: 102px;
@@ -74,7 +74,7 @@
   width: 16px;
   height: 13px;
   left: -20px;
-  top: 4px;
+  top: 0;
 }
 
 .theme-menu__button {
@@ -133,7 +133,7 @@
   font-size: 18px;
   background-color: var(--bg-color);
   border: 2px solid var(--accent-color);
-  margin-block-end: 47px;
+  margin-block-end: 51px;
 }
 
 .section__title {
@@ -147,28 +147,32 @@
   border-block: 2px solid var(--accent-color);
 }
 
-.section__content {
-  padding: 25px;
-}
-
 .section__card {
   font-weight: var(--normal-font-weight);
+  padding: 25px;
 }
 
 .section__description {
   font-size: 18px;
   line-height: 21px;
-  margin-block-end: 25px;
+}
+
+.section__description:not(:last-child) {
+  margin-block-end: 27px;
 }
 
 .card__like {
   display: flex;
   justify-content: end;
   align-items: center;
+  padding-inline-end: 25px;
+  margin-block-end: 23px;
 }
 
 .card__icon-button {
+  height: 38px;
   margin-inline-end: 6px;
+  border: 2px solid transparent;
 }
 
 .card__icon-button:focus {
@@ -176,14 +180,14 @@
 }
 
 .card__icon-button:focus-visible {
-  outline: 2px solid var(--accent-color); /*неровно относительно кнопки*/
+  border: 2px solid var(--accent-color);
   transition: outline 0.3s ease;
 }
 
 .card__like-button {
   text-align: center;
   width: 127px;
-  padding: 7px 34px;
+  padding: 7px 0;
   border: 2px solid var(--accent-color);
 }
 
@@ -273,6 +277,10 @@
 
   .content {
     width: 100%;
+  }
+
+  .section__card {
+    padding: 21px 48px 25px 25px;
   }
 
   .footer__button {
