--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,106 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+/*стрелочка в хедере*/
+
+@keyframes arrow {
+  0% {
+    left: -20px;
+  }
+  50% {
+    left: -16px;
+  }
+  100% {
+    left: -20px;
+  }
+}
+
+.theme-menu__button:disabled::before {
+  animation: arrow 1s ease-in-out infinite;
+}
+
+/*лайк ховер*/
+
+.card__icon-button:hover .core {
+  fill: var(--accent-color, #000000);
+  transition: fill 0.3s linear;
+}
+
+.card__icon-button:hover .main-body {
+  fill: var(--accent-color, #000000);
+  transition: fill 0.3s 0.05s linear;
+}
+
+.card__icon-button .main-body {
+  fill: var(--bg-color, #FFFFFF);
+  transition: fill 0.3s linear;
+}
+
+.card__icon-button .core {
+  fill: var(--bg-color, #FFFFFF);
+  transition: fill 0.3s 0.03s linear;
+}
+
+/*лайк актив*/
+
+.card__icon-button:active .core {
+  fill: var(--heart-accent, #FF0000);
+  transition: fill 0.3s linear;
+}
+
+.card__icon-button:active .main-body {
+  fill: var(--heart-accent, #FF0000);
+  transition: fill 0.3s 0.05s linear;
+}
+
+/*клик по иконке*/
+
+.like-icon.is-liked .core {
+  fill: var(--heart-accent, #FF0000);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--heart-accent, #FF0000);
+  transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--heart-accent, #FF0000);
+  transition: fill 0.3s 0.06s linear;
+}
+
+@keyframes heart {
+  from {
+    scale: 1;
+  }
+
+  to {
+    scale: 1.5;
+  }
+}
+
+.like-icon.is-liked .heart {
+  transform-origin: center;
+  animation: heart 0.3s 0.1s ease-in;
+}
+
+@keyframes sparks {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks 0.3s 0.3s ease-in;
+}
+
+.like-icon .contour {
+  fill: var(--accent-color, #000000);
+  transition: fill 0.1s linear;
+}
