--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,404 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+
+  font-family: var(--main-font-family, "Inter", sans-serif);
+  font-variation-settings: "wght" var(--normal-font-weight, 465);
+  background-color: var(--bg-color, #ffffff);
+  background-image: var(--bg-gradient);
+  background-size: cover;
+  color: var(--accent-color, #000000);
+  background-attachment: fixed;
+  background-repeat: repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-block-start: 102px;
+}
+
+.header {
+  text-transform: uppercase;
+  background-color: var(--bg-color, #ffffff);
+  border: 2px solid var(--accent-color, #000000);
+  font-family: var(--accent-font-family, "PressStart2P", fantasy);
+  font-weight: var(--normal-font-weight, 400);
+  padding-block-start: clamp(7.5rem, 7.1479rem + 1.5023vw, 8.5rem);
+  padding-block-end: 28px;
+  width: clamp(371px, 50%, 696px);
+  margin-block-end: 102px;
+}
+
+.header__title {
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  margin-block-end: 20px;
+  text-align: center;
+}
+
+.header__subtitle {
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  margin-block-end: 22px;
+  text-align: center;
+}
+
+.header__theme-menu {
+  padding-left: 18px;
+}
+
+.theme-menu__list {
+  width: fit-content;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.theme-menu__button:disabled::before {
+  position: absolute;
+  content: "▶";
+  width: 16px;
+  height: 13px;
+  left: -20px;
+  top: 0;
+}
+
+.theme-menu__button {
+  position: relative;
+  font-size: 14px;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+}
+
+.theme-menu__button:focus-visible {
+  outline: none;
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+}
+
+.theme-menu__button::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  width: 100%;
+  height: 2px;
+  background-color: var(--accent-color, #000000);
+  opacity: 0.6;
+  transition: transform 0.3s ease;
+  transform-origin: left center;
+  transform: scaleX(0);
+}
+
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+}
+
+.content {
+  width: clamp(371px, 50%, 696px);
+}
+
+.content__section {
+  margin-inline-start: auto;
+  margin-inline-end: auto;
+  font-size: 18px;
+}
+
+.card {
+  border: 2px solid var(--accent-color, #000000);
+  background-color: var(--bg-color, #ffffff);
+  margin-block-end: 50px;
+}
+
+.card__title {
+  font-variation-settings: "wght" var(--bold-font-weight, 700);
+  font-size: 18px;
+  padding: 4px 10px;
+}
+
+.card__image {
+  position: relative;
+}
+
+.filter-invert {
+  filter: invert(0.9);
+}
+
+.filter-sepia {
+  filter: sepia(80%);
+}
+
+.filter-hue-rotate {
+  filter: hue-rotate(180deg);
+}
+
+.filter-saturate {
+  filter: saturate(150%);
+}
+
+.filter-contrast {
+  filter: contrast(200%);
+}
+
+.filter-brightness-blur {
+  filter: brightness(120%) blur(3px);
+}
+
+.filter-grayscale {
+  filter: grayscale(0.6);
+}
+
+.filter-hue-rotate-saturate {
+  filter: hue-rotate(-90deg) saturate(150%);
+}
+
+.card__image-content {
+  width: 100%;
+  border-block: 2px solid var(--accent-color, #000000);
+}
+
+.card__image-label {
+  position: absolute;
+  right: 25px;
+  top: 25px;
+  font-family: var(--accent-font-family, "PressStart2P", fantasy);
+  font-size: 14px;
+  font-weight: var(--normal-font-weigh, 400);
+  text-transform: uppercase;
+  text-shadow: 0 0 1px var(--shadow-color, #FFFFFF);
+  opacity: 0.5;
+  mix-blend-mode: hard-light;
+}
+
+@supports ((text-stroke: 1px var(--shadow-color)) or (-webkit-text-stroke: 1px var(--shadow-color))) { /*КАК УЗНАТЬ ШИРИНУ ОБВОДКИ???*/
+  .card__image-label {
+    -webkit-text-stroke: 1px var(--shadow-color, #FFFFFF);
+    text-stroke: 1px var(--shadow-color, #FFFFFF);
+    text-shadow: none;
+  }
+}
+
+.card__content {
+  font-weight: var(--normal-font-weight, 400);
+  padding: 25px;
+}
+
+.card__description {
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.card__description:not(:last-child) {
+  margin-block-end: 27px;
+}
+
+.card__like {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding-inline-end: 25px;
+  margin-block-end: 23px;
+}
+
+.card__icon-button {
+  height: 38px;
+  margin-inline-end: 6px;
+  border: 2px solid transparent;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--accent-color, #000000);
+  transition: outline 0.3s ease;
+}
+
+.card__like-button {
+  text-align: center;
+  width: 127px;
+  padding: 7px 0;
+  border: 2px solid var(--accent-color, #000000);
+}
+
+.button-animation {
+  position: relative;
+  color: var(--difference-color, #ffffff);
+  background-color: var(--difference-bg-color, #ffffff);
+}
+
+.button-animation:hover {
+  transition: color 1s ease;
+}
+
+.button-animation::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: var(--difference-color, #ffffff);
+  mix-blend-mode: difference;
+  transition: transform 0.5s ease-in-out;
+  transform-origin: left center;
+  transform: scaleX(0);
+}
+
+.button-animation:hover::after {
+  transform: scaleX(1);
+}
+
+.card__like-button:focus {
+  outline: none;
+}
+
+.card__like-button:focus-visible {
+  box-shadow: 2px 2px 0 var(--accent-color, #000000);
+  transition: box-shadow 0.3s ease;
+}
+
+.button__text {
+  position: relative;
+  z-index: 1;
+  font-family: var(--accent-font-family, "PressStart2P", fantasy);
+  font-size: 14px;
+  font-weight: var(--normal-font-weight, 400);
+  mix-blend-mode: difference;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.footer {
+  margin-block-end: 102px;
+}
+
+.footer__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--difference-bg-color, #ffffff);
+  padding: 14px 20px;
+  border: 2px solid var(--accent-color, #000000);
+  color: var(--difference-color, #ffffff);
+}
+
+.footer__button:focus {
+  outline: none;
+}
+
+.footer__button:focus-visible {
+  box-shadow: 2px 2px 0 var(--accent-color, #000000);
+  transition: box-shadow 0.3s ease;
+}
+
+.footer__svg {
+  fill: currentColor;
+  margin-inline-end: 8px;
+  position: relative;
+  width: 21px;
+  height: 21px;
+  z-index: 1;
+  mix-blend-mode: difference;
+}
+
+#dialog-id {
+  position: fixed;
+  inset: 0;
+  background-color: var(--bg-color, #ffffff);
+  border: 2px solid var(--accent-color, #000000);
+  padding: 31px;
+}
+
+#dialog-id[open]::backdrop {
+  background-color: #000000;
+  opacity: 0.75;
+}
+
+#dialog-id[open] {
+  width: clamp(21.3125rem, 20.9604rem + 1.5023vw, 22.3125rem);
+}
+
+#dialog:not([open]) {
+  pointer-events: none;
+  opacity: 0;
+} 
+
+.dialog__content {
+  color: var(--difference-color, #ffffff);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  margin-block-end: 30px;
+}
+
+.dialog__content svg {
+  width: 39px;
+  height: 39px;
+  flex-shrink: 0;
+}
+
+.dialog .footer__svg {
+  margin: 0;
+}
+
+.dialog__description {
+  font-family: var(--accent-font-family, "PressStart2P", fantasy);
+  color: var(--accent-color, #000000);
+  font-size: 14px;
+  font-weight: var(--normal-font-weigh, 400);
+  line-height: 150%;
+  text-transform: uppercase;
+}
+
+.dialog__button {
+  border: 2px solid var(--accent-color, #000000);
+  padding: 12px 0;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+@media (width <= 375px) {
+  .header {
+    width: 100%;
+  }
+
+  .content {
+    width: 100%;
+  }
+
+  .card__content {
+    padding: 21px 25px 25px 25px;
+  }
+
+  .footer__button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .footer__svg {
+    margin-inline-end: 0;
+    width: 28px;
+    height: 28px;
+  }
 }
