--- a/styles/style.css
+++ b/styles/style.css
@@ -44,13 +44,14 @@
   margin-block-end: 102px;
 }
 
-.header__title {
+.header__link {
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   margin-block-end: 20px;
+  display: block;
   text-align: center;
 }
 
-.header__subtitle {
+.header__title {
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
   margin-block-end: 22px;
   text-align: center;
@@ -184,8 +185,7 @@
 .card__image-content {
   width: 100%;
   border-block: 2px solid var(--accent-color, #000000);
-  object-fit: cover;
-  object-position: center;
+  aspect-ratio: 1/1;
 }
 
 .card__image-label {
@@ -305,6 +305,8 @@
 }
 
 .footer {
+  display: flex;
+  justify-content: center;
   margin-block-end: 102px;
 }
 
@@ -392,6 +394,15 @@
   padding: 12px 0;
   text-transform: uppercase;
   width: 100%;
+}
+
+.dialog__button:focus {
+  outline: none;
+}
+
+.dialog__button:focus-visible {
+  box-shadow: 2px 2px 0 var(--accent-color, #000000);
+  transition: box-shadow 0.3s ease;
 }
 
 @media (width <= 375px) {
